[gd_scene load_steps=5 format=3 uid="uid://ddu4tbhomgpw"]

[ext_resource type="Script" path="res://meta/possession.gd" id="1_iri35"]

[sub_resource type="Gradient" id="Gradient_aywx6"]
colors = PackedColorArray(0, 0, 0, 0.596078, 0.0901961, 0.0901961, 0.0901961, 0.721569)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pd1a2"]
gradient = SubResource("Gradient_aywx6")

[sub_resource type="Environment" id="Environment_1kfav"]
background_mode = 1
background_color = Color(0, 0, 0, 0)
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 2.55

[node name="possession" type="Node3D"]
script = ExtResource("1_iri35")

[node name="ui" type="Node3D" parent="."]

[node name="inventory" type="Control" parent="ui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background" type="TextureRect" parent="ui/inventory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_pd1a2")

[node name="player_view_container" type="SubViewportContainer" parent="ui/inventory"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="player_view" type="SubViewport" parent="ui/inventory/player_view_container"]
transparent_bg = true
handle_input_locally = false
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="camera" type="Camera3D" parent="ui/inventory/player_view_container/player_view"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -1.40463)
cull_mask = 2
environment = SubResource("Environment_1kfav")
fov = 60.0

[node name="lamp" type="SpotLight3D" parent="ui/inventory/player_view_container/player_view"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -1.31604)
layers = 2
light_energy = 1.066
light_cull_mask = 4293918722

[node name="hud" type="Control" parent="ui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="active_interact_target" type="Label" parent="ui/hud"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -73.0
offset_right = 20.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1
